# sfml-sandbox

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
main/: CMakeLists.txt  main.cpp
src/: Application.cpp  Application.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  main.cpp
